--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEATHER FORECAST</title>
 
-    <link rel="stylesheet" href="weather.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form class="weatherForm">
@@ -17,7 +17,7 @@
         
     </div>
 
-    <script src="weather.js"></script>
+    <script src="script.js"></script>
     
 </body>
 </html>
